# slackshot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: auth.rs  channel.rs  conversations.rs  main.rs  terminal.rs  user.rs
