[package]
name = "slackshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
chrono-tz = "0.8.6"
clap = { version = "4.5.3", features = ["derive"] }
derive_more = "0.99.17"
dialoguer = "0.11.0"
dirs = "5.0.1"
indicatif = "0.17.8"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = "0.26.2"
strum_macros = "0.26.2"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
